--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
     <!-- style sheet -->
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
     <header class="center">
@@ -16,18 +17,22 @@
         This is the testing ground for my crazy ideas and things I am
         practicing.
       </h3>
-    </header>
-
-    <!-- This section is for a concept of hostile user design -->
-    <!-- Make the experience as painful as possible without being completely overbearing -->
-    <section class="center">
-      <div>
-        <h2 class="center">Hostile User Design</h2>
-        <div id="hostile-fn-div">
-          <h3>How many letters are in your first name?</h3>
+      <div class="navbar">
+        <a href="#home">Home</a>
+        <!-- <a href="#news">News</a> -->
+        <div class="dropdown">
+          <button class="dropbtn">
+            Projects
+            <i class="fa fa-caret-down"></i>
+          </button>
+          <div class="dropdown-content">
+            <a href="file:///C:/Users/Jones/Documents/My%20Projects/chubby-otter/projects/hostile-design-concept/hostile.html">Hostile Design</a>
+            <a href="#">Link 2</a>
+            <a href="#">Link 3</a>
+          </div>
         </div>
       </div>
-    </section>
+    </header>
 
     <script src="index.js"></script>
   </body>
