--- a/projects/hostile-design-concept/hostile.html
+++ b/projects/hostile-design-concept/hostile.html
@@ -52,17 +52,6 @@
       </p>
     </article>
 
-    <!-- <header class="center">
-      <h1 class="">Hostile User Design</h1>
-      <h3 class="description">
-        This page is a concept based on hostile architecture
-      </h3>
-      <h3>What is hostile architecture?</h3>
-      <p>This Wiki article <a href='https://en.wikipedia.org/wiki/Hostile_architecture' target="_blank">Hostile Architecture</a> explains it pretty well.</p>
-    </header> -->
-
-    <!-- This section is for a concept of hostile user design -->
-    <!-- Make the experience as painful as possible without being completely overbearing -->
     <section class="center">
       <div>
         <h2 class="">Sign Up for an account!</h2>
@@ -70,8 +59,7 @@
           Don't worry, it's just the account creation process, we won't log or
           track any info.
         </p>
-        <div id="hostile-fn-div">
-          <h3>How many letters are in your first name?</h3>
+        <div id="hostile-register-div">
         </div>
       </div>
     </section>
