HUD - Set up for slider generation

--- a/projects/hostile-design-concept/hostile.html
+++ b/projects/hostile-design-concept/hostile.html
@@ -59,7 +59,7 @@
           Don't worry, it's just the account creation process, we won't log or
           track any info.
         </p>
-        <div id="hostile-register-div">
+        <div id="hostile-form-div">
         </div>
       </div>
     </section>
