Header & nav correction

--- a/projects/hostile-design-concept/hostile.html
+++ b/projects/hostile-design-concept/hostile.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <header class="">
-      <h1 class="">Hostile Architecture</h1>
+      <h1 class="">Hostile User Design</h1>
       <h3 class="description">
         This page is a concept based on hostile architecture
       </h3>
