fix routing in nav bar

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <i class="fa fa-caret-down"></i>
           </button>
           <div class="dropdown-content">
-            <a href="file:///C:/Users/Jones/Documents/My%20Projects/chubby-otter/projects/hostile-design-concept/hostile.html">Hostile User Design</a>
+            <a href="./projects/hostile-design-concept/hostile.html">Hostile User Design</a>
             <a href="#">Link 2</a>
             <a href="#">Link 3</a>
           </div>
