--- a/projects/hostile-design-concept/hostile.html
+++ b/projects/hostile-design-concept/hostile.html
@@ -29,7 +29,7 @@
           </button>
           <div class="dropdown-content">
             <a
-              href="file:///C:/Users/Jones/Documents/My%20Projects/chubby-otter/projects/hostile-design-concept/hostile.html"
+              href=""
               >Hostile Design</a
             >
             <a href="#">Link 2</a>
