--- a/index.html
+++ b/index.html
@@ -8,16 +8,20 @@
 
     <!-- style sheet -->
     <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
   </head>
   <body>
-    <header class="center">
-      <h1 class="center">Welcome to Chubby Otter</h1>
+
+    <header class="">
+      <h1 class="">Welcome to Chubby Otter</h1>
       <h3 class="description">
-        This is the testing ground for my crazy ideas and things I am
-        practicing.
+        This is the testing ground for all our crazy ideas and things we want to
+        practice.
       </h3>
-      <div class="navbar">
+      <nav class="navbar">
         <a href="#home">Home</a>
         <!-- <a href="#news">News</a> -->
         <div class="dropdown">
@@ -26,13 +30,27 @@
             <i class="fa fa-caret-down"></i>
           </button>
           <div class="dropdown-content">
-            <a href="./projects/hostile-design-concept/hostile.html">Hostile User Design</a>
+            <a href="./projects/hostile-design-concept/hostile.html"
+              >Hostile User Design</a
+            >
             <a href="#">Link 2</a>
             <a href="#">Link 3</a>
           </div>
         </div>
-      </div>
+      </nav>
     </header>
+
+    <section class="center">
+      <h1>Contributors</h1>
+      <article>
+        <h3>Elliott Jones</h3>
+        <p>GitHub: <a href="https://github.com/JonesElliott">JonesElliott</a></p>
+      </article>
+      <article>
+        <h3>Sam Foster</h3>
+        <p>GitHub: <a href="https://github.com/Samwise2980">Samwise2980</a></p>
+      </article>
+    </section>
 
     <script src="index.js"></script>
   </body>
