Cleaned up Hostile User Design page, added margins so preview text isn't cluttered

--- a/projects/hostile-design-concept/hostile.html
+++ b/projects/hostile-design-concept/hostile.html
@@ -28,10 +28,7 @@
             <i class="fa fa-caret-down"></i>
           </button>
           <div class="dropdown-content">
-            <a
-              href=""
-              >Hostile Design</a
-            >
+            <a href="">Hostile Design</a>
             <a href="#">Link 2</a>
             <a href="#">Link 3</a>
           </div>
@@ -55,14 +52,10 @@
     <section class="center">
       <div>
         <h2 class="">Sign Up for an account!</h2>
-        <p>
-          Don't worry, it's just the account creation process, we won't log or
-          track any info.
-        </p>
-        <div id="hostile-form-div">
-        </div>
+        <div id="hostile-form-div"></div>
       </div>
     </section>
+
     <script src="script/hostile.js"></script>
   </body>
 </html>
