Fixed formatting for Hostile User Design page. New css class absolute center to align content to center page

--- a/projects/hostile-design-concept/hostile.html
+++ b/projects/hostile-design-concept/hostile.html
@@ -14,8 +14,8 @@
     />
   </head>
   <body>
-    <header class="">
-      <h1 class="">Hostile User Design</h1>
+    <header>
+      <h1>Hostile User Design</h1>
       <h3 class="description">
         This page is a concept based on hostile architecture
       </h3>
@@ -36,7 +36,7 @@
       </div>
     </header>
 
-    <article class="center">
+    <article class="absolute-center">
       <h3>What is hostile architecture?</h3>
       <p>
         This Wiki article
@@ -49,11 +49,12 @@
       </p>
     </article>
 
-    <section class="center">
+    <section class="absolute-center">
       <div>
-        <h2 class="">Sign Up for an account!</h2>
-        <div id="hostile-form-div"></div>
+        <h2>Sign Up for an account!</h2>
+        <div id="hostile-form-instructions"></div>
       </div>
+      <div id="hostile-form-input"></div>
     </section>
 
     <script src="script/hostile.js"></script>
