Merges with main. No conflicts.

--- a/projects/hostile-design-concept/aggravating-captcha/captcha.html
+++ b/projects/hostile-design-concept/aggravating-captcha/captcha.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="../style/hostyle.css">
   <link rel="stylesheet" href="captcha.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
-  <title>Document</title>
+  <title>CO: Annoying Captcha</title>
 </head>
 
 <body>
@@ -18,7 +18,7 @@
       This page is a concept based on hostile architecture
     </h3>
     <div class="navbar">
-      <a href="../../index.html">Home</a>
+      <a href="../../../index.html">Home</a>
       <!-- <a href="#news">News</a> -->
       <div class="dropdown">
         <button class="dropbtn">
@@ -26,8 +26,8 @@
           <i class="fa fa-caret-down"></i>
         </button>
         <div class="dropdown-content">
-          <a href="">Hostile Design</a>
-          <a href="#">Link 2</a>
+          <a href="../hostile.html">Hostile Design</a>
+          <a href="../aggravating-captcha/captcha.html">Annoying Captcha</a>
           <a href="#">Link 3</a>
         </div>
       </div>
