Changes captcha html and css to work with the new absolute-center css

--- a/projects/hostile-design-concept/aggravating-captcha/captcha.html
+++ b/projects/hostile-design-concept/aggravating-captcha/captcha.html
@@ -34,11 +34,11 @@
     </div>
   </header>
 
-  <section class="center">
+  <section class="absolute-center">
+    <h1 class="">This is a really annoying captcha</h1>
     <div>
-      <h1 class="center">This is a really annoying captcha</h1>
-      <div class="center" id="captcha-container">
-        <div class="center" id="captcha-text-box">
+      <div class="" id="captcha-container">
+        <div class="" id="captcha-text-box">
           <h2 id="captcha-text">XCS2DT</h2>
         </div>
         <div id="captcha-submit-form">
