Added submit button to first name form. Minor refactoring to html ids. Set up for last name input form

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <a href="./projects/hostile-design-concept/hostile.html"
               >Hostile User Design</a
             >
-            <a href="#">Link 2</a>
+            <a href="../aggravating-captcha/captcha.html">Annoying Captcha</a>
             <a href="#">Link 3</a>
           </div>
         </div>
