--- a/projects/hostile-design-concept/hostile.html
+++ b/projects/hostile-design-concept/hostile.html
@@ -29,7 +29,7 @@
           </button>
           <div class="dropdown-content">
             <a href="">Hostile Design</a>
-            <a href="#">Link 2</a>
+            <a href="../aggravating-captcha/captcha.html">Annoying Captcha</a>
             <a href="#">Link 3</a>
           </div>
         </div>
