--- a/projects/hostile-design-concept/aggravating-captcha/captcha.html
+++ b/projects/hostile-design-concept/aggravating-captcha/captcha.html
@@ -35,19 +35,19 @@
   </header>
 
   <section class="absolute-center">
-    <h1 class="">This is a really annoying captcha</h1>
-    <div>
-      <div class="" id="captcha-container">
-        <div class="" id="captcha-text-box">
-          <h2 id="captcha-text">XCS2DT</h2>
+    <h1>This is a really annoying captcha</h1>
+    <article>
+      <div class="captcha-container">
+        <div class="captcha-text-box">
+          <h2 class="captcha-text" id="captcha-text">XCS2DT</h2>
         </div>
-        <div id="captcha-submit-form">
+        <div class="captcha-submit-form">
           <h3>I am not a robot!</h3>
           <input>
           <button>Submit</button>
         </div>
       </div>
-    </div>
+    </article>
   </section>
 </body>
 <script src="captcha.js"></script>
