Creates random captcha text and verifies if it matches what the user inputs

--- a/projects/hostile-design-concept/aggravating-captcha/captcha.html
+++ b/projects/hostile-design-concept/aggravating-captcha/captcha.html
@@ -41,11 +41,11 @@
         <div class="captcha-text-box">
           <h2 class="captcha-text" id="captcha-text">XCS2DT</h2>
         </div>
-        <div class="captcha-submit-form">
+        <form class="captcha-submit-form">
           <h3>I am not a robot!</h3>
-          <input>
-          <button>Submit</button>
-        </div>
+          <input type="text" id="fn-captcha-input">
+          <button type="submit" id="fn-captcha-button">Submit</button>
+        </form>
       </div>
     </article>
   </section>
