Clean up styling of header across all pages

--- a/index.html
+++ b/index.html
@@ -14,13 +14,14 @@
     />
   </head>
   <body>
-
     <header class="">
-      <h1 class="">Welcome to Chubby Otter</h1>
-      <h3 class="description">
-        This is the testing ground for all our crazy ideas and things we want to
-        practice.
-      </h3>
+      <div class="page-title">
+        <h1 class="">Welcome to Chubby Otter</h1>
+        <h3 class="description">
+          This is the testing ground for all our crazy ideas and things we want
+          to practice.
+        </h3>
+      </div>
       <nav class="navbar">
         <a href="#home">Home</a>
         <!-- <a href="#news">News</a> -->
@@ -33,7 +34,10 @@
             <a href="./projects/hostile-design-concept/hostile.html"
               >Hostile User Design</a
             >
-            <a href="./projects/hostile-design-concept/aggravating-captcha/captcha.html">Annoying Captcha</a>
+            <a
+              href="./projects/hostile-design-concept/aggravating-captcha/captcha.html"
+              >Annoying Captcha</a
+            >
             <a href="#">Link 3</a>
           </div>
         </div>
@@ -44,7 +48,9 @@
       <h1>Contributors</h1>
       <article>
         <h3>Elliott Jones</h3>
-        <p>GitHub: <a href="https://github.com/JonesElliott">JonesElliott</a></p>
+        <p>
+          GitHub: <a href="https://github.com/JonesElliott">JonesElliott</a>
+        </p>
       </article>
       <article>
         <h3>Sam Foster</h3>
