--- a/projects/hostile-design-concept/hostile.html
+++ b/projects/hostile-design-concept/hostile.html
@@ -15,10 +15,12 @@
   </head>
   <body>
     <header>
-      <h1>Hostile User Design</h1>
-      <h3 class="description">
-        This page is a concept based on hostile architecture
-      </h3>
+      <div class="page-title">
+        <h1>Hostile User Design</h1>
+        <h3 class="description">
+          This page is a concept based on hostile architecture
+        </h3>
+      </div>
       <div class="navbar">
         <a href="../../index.html">Home</a>
         <!-- <a href="#news">News</a> -->
