Updating page names in nav bar

--- a/index.html
+++ b/index.html
@@ -26,19 +26,11 @@
         <a href="#home">Home</a>
         <!-- <a href="#news">News</a> -->
         <div class="dropdown">
-          <button class="dropbtn">
-            Projects
-            <i class="fa fa-caret-down"></i>
-          </button>
+          <button class="dropbtn">Hostile UX <i class="fa fa-caret-down"></i></button>
           <div class="dropdown-content">
-            <a href="./projects/hostile-design-concept/hostile.html"
-              >Hostile User Design</a
-            >
-            <a
-              href="./projects/hostile-design-concept/aggravating-captcha/captcha.html"
-              >Annoying Captcha</a
-            >
-            <a href="#">Link 3</a>
+            <a href="./projects/hostile-design-concept/hostile.html">Frustrating Forms</a>
+            <a href="./projects/hostile-design-concept/aggravating-captcha/captcha.html">Combative Captcha</a>
+            <a href="#">About</a>
           </div>
         </div>
       </nav>
