--- a/projects/hostile-design-concept/hostile.html
+++ b/projects/hostile-design-concept/hostile.html
@@ -25,14 +25,11 @@
         <a href="../../index.html">Home</a>
         <!-- <a href="#news">News</a> -->
         <div class="dropdown">
-          <button class="dropbtn">
-            Projects
-            <i class="fa fa-caret-down"></i>
-          </button>
+          <button class="dropbtn">Hostile UX <i class="fa fa-caret-down"></i></button>
           <div class="dropdown-content">
-            <a href="">Hostile Design</a>
-            <a href="./aggravating-captcha/captcha.html">Annoying Captcha</a>
-            <a href="#">Link 3</a>
+            <a href="">Frustrating Forms</a>
+            <a href="./aggravating-captcha/captcha.html">Combative Captcha</a>
+            <a href="#">About</a>
           </div>
         </div>
       </div>
