--- a/projects/hostile-ux/combative-captcha/captcha.html
+++ b/projects/hostile-ux/combative-captcha/captcha.html
@@ -4,12 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../style/hostyle.css" />
+    <link rel="stylesheet" href="../frustrating-forms/style/forms.css" />
     <link rel="stylesheet" href="captcha.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
-    />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
     <title>CO: Annoying Captcha</title>
   </head>
 
@@ -27,8 +24,8 @@
         <div class="dropdown">
           <button class="dropbtn">Hostile UX <i class="fa fa-caret-down"></i></button>
           <div class="dropdown-content">
-            <a href="../hostile.html">Frustrating Forms</a>
-            <a href="../aggravating-captcha/captcha.html">Combative Captcha</a>
+            <a href="../frustrating-forms/forms.html">Frustrating Forms</a>
+            <a href="../combative-captcha/captcha.html">Combative Captcha</a>
             <a href="#">About</a>
           </div>
         </div>
