--- a/projects/hostile-ux/frustrating-forms/forms.html
+++ b/projects/hostile-ux/frustrating-forms/forms.html
@@ -7,11 +7,8 @@
     <title>CO: Hostile Design</title>
 
     <!-- style sheet -->
-    <link rel="stylesheet" href="style/hostyle.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
-    />
+    <link rel="stylesheet" href="style/forms.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
   </head>
   <body>
     <header>
@@ -22,13 +19,13 @@
         </h3>
       </div>
       <div class="navbar">
-        <a href="../../index.html">Home</a>
+        <a href="../../../index.html">Home</a>
         <!-- <a href="#news">News</a> -->
         <div class="dropdown">
           <button class="dropbtn">Hostile UX <i class="fa fa-caret-down"></i></button>
           <div class="dropdown-content">
-            <a href="">Frustrating Forms</a>
-            <a href="./aggravating-captcha/captcha.html">Combative Captcha</a>
+            <a href="../frustrating-forms/forms.html">Frustrating Forms</a>
+            <a href="../combative-captcha/captcha.html">Combative Captcha</a>
             <a href="#">About</a>
           </div>
         </div>
@@ -39,12 +36,7 @@
       <h3>What is hostile architecture?</h3>
       <p>
         This Wiki article
-        <a
-          href="https://en.wikipedia.org/wiki/Hostile_architecture"
-          target="_blank"
-          >Hostile Architecture</a
-        >
-        explains it pretty well.
+        <a href="https://en.wikipedia.org/wiki/Hostile_architecture" target="_blank">Hostile Architecture</a> explains it pretty well.
       </p>
     </article>
 
@@ -56,6 +48,6 @@
       <div id="hostile-form-input"></div>
     </section>
 
-    <script src="script/hostile.js"></script>
+    <script src="script/forms.js"></script>
   </body>
 </html>
