--- a/projects/hostile-ux/combative-captcha/captcha.html
+++ b/projects/hostile-ux/combative-captcha/captcha.html
@@ -36,11 +36,11 @@
   <section class="absolute-center">
     <h1>Please verify that you are not a robot</h1>
     <article class="captcha-container">
-      <div class="captcha-text-box">
-        <h2 class="captcha-text" id="captcha-text">XCS2DT</h2>
+      <div class="captcha-text-box" id="captcha-box">
+        <h2 class="captcha-text" id="captcha-text"></h2>
       </div>
-      <form class="captcha-submit-form">
-        <h3>I am not a robot!</h3>
+      <form class="captcha-submit-form" id="captcha-form">
+        <h3 id="robot-text">I am not a robot!</h3>
         <input type="text" id="fn-captcha-input" />
         <button type="submit" id="fn-captcha-button">Submit</button>
       </form>
